# velos

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  publish.yml
crates/apiserver/: Cargo.toml
crates/apiserver/src/: lib.rs  main.rs
crates/apiserver/ui/: index.html
crates/apiserver/ui/assets/: index-BfB49Zho.css  index-BiJYlFoe.js
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/fleet-apiserver/: Cargo.toml
crates/fleet-apiserver/src/: lib.rs  main.rs
crates/fleet-models/: Cargo.toml
crates/fleet-models/fluorite/: fleet.fl
crates/fleet-models/src/: lib.rs
crates/fleet-store/: Cargo.toml
crates/fleet-store/src/: lib.rs
crates/models/: Cargo.toml  build.rs
crates/models/fluorite/: velos.fl
crates/models/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: controllers.rs  lib.rs  main.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: e2e.rs  e2e_apple.rs
crates/velosctl/: Cargo.toml
crates/velosctl/src/: lib.rs  main.rs
crates/veloslet/: Cargo.toml
crates/veloslet/src/: client.rs  daemon.rs  host.rs  lib.rs  main.rs  memory.rs  reconcile.rs  signing.rs
docs/: getting-started.md
docs/superpowers/plans/: 2026-06-27-fleet-phase1-control-plane-spine.md  2026-06-27-velos-phase1-control-plane-spine.md  2026-06-28-velosctl-admin-auth.md  2026-06-28-veloslet-resource-capacity-config.md
docs/superpowers/specs/: 2026-06-27-fleet-design.md  2026-06-27-velos-design.md  2026-06-28-velosctl-admin-auth-design.md  2026-06-28-veloslet-resource-capacity-config-design.md
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  auth.ts  format.ts  index.css  main.tsx  types.ts  ui.tsx
web/src/components/: CreateContainer.tsx  Drawer.tsx
web/src/views/: AuthGate.tsx  Containers.tsx  Overview.tsx  Tokens.tsx  Workers.tsx
