[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["xiaoguang <zhxiaog@outlook.com>"]
repository = "https://github.com/zhxiaogg/velos"

# Internal crates carry both `path` (for local builds) and `version` (required so
# crates.io can record an exact dependency when publishing).
[workspace.dependencies]
velos-store = { path = "crates/store", version = "0.1.0" }
velos-scheduler = { path = "crates/scheduler", version = "0.1.0" }
velos-runtime = { path = "crates/runtime", version = "0.1.0" }
velos-auth = { path = "crates/auth", version = "0.1.0" }
velos-apiserver = { path = "crates/apiserver", version = "0.1.0" }
veloslet = { path = "crates/veloslet", version = "0.1.0" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
wildcard_enum_match_arm = "deny"
