[package]
name = "velos-apiserver"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "velos_apiserver"
path = "src/lib.rs"

[[bin]]
name = "velos-apiserver"
path = "src/main.rs"

[dependencies]
velos-store = { path = "../store" }
velos-scheduler = { path = "../scheduler" }
velos-auth = { path = "../auth" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
