[package]
name = "velos-apiserver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Velos control-plane API server: REST surface, scheduler, and controllers."
# The built UI (ui/) is gitignored and produced just-in-time. An explicit
# `include` overrides gitignore at package time, so a CI build that populated
# ui/ is still baked into the published crate (keeping `cargo install` working).
include = ["src/**/*", "ui/**/*"]

[lints]
workspace = true

[lib]
name = "velos_apiserver"
path = "src/lib.rs"

[[bin]]
name = "velos-apiserver"
path = "src/main.rs"

[dependencies]
velos-store = { workspace = true }
velos-scheduler = { workspace = true }
velos-auth = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# Embeds the built web UI (crates/apiserver/ui) into the binary so the apiserver
# can serve the dashboard with no separate process. Debug builds read from disk;
# release builds embed at compile time.
rust-embed = { version = "8", features = ["mime-guess"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
