[package]
name = "velos-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
velos-store = { path = "../store" }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0"
thiserror = "1.0"
