[package]
name = "fleet-apiserver"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "fleet_apiserver"
path = "src/lib.rs"

[[bin]]
name = "fleet-apiserver"
path = "src/main.rs"

[dependencies]
fleet-store = { path = "../fleet-store" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
