[package]
name = "velos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Velos container-runtime seam and its backends."

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = ["process", "rt", "macros"] }
serde_json = "1.0"
tracing = "0.1"
