[package]
name = "velos-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Schema-agnostic SQLite persistence for Velos objects, behind a Store trait."

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
