[package]
name = "velos-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]

[dev-dependencies]
velos-apiserver = { workspace = true }
velos-store = { workspace = true }
velos-runtime = { workspace = true }
velos-auth = { workspace = true }
veloslet = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1.0"
