[package]
name = "velosctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "velosctl: a thin command-line client for the Velos REST API."

[lints]
workspace = true

[lib]
name = "velosctl"
path = "src/lib.rs"

[[bin]]
name = "velosctl"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
