[package]
name = "veloslet"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "veloslet"
path = "src/lib.rs"

[[bin]]
name = "veloslet"
path = "src/main.rs"

[dependencies]
velos-runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
velos-apiserver = { path = "../apiserver" }
velos-store = { path = "../store" }
