[package]
name = "veloslet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Velos worker daemon: registers a node and reconciles its containers."

[lints]
workspace = true

[lib]
name = "veloslet"
path = "src/lib.rs"

[[bin]]
name = "veloslet"
path = "src/main.rs"

[dependencies]
velos-runtime = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
velos-server = { workspace = true }
velos-store = { workspace = true }
